# DeepLearner

./: .gitignore  README.md  package.json
agent-orchestrator-api/: README.md  main.py  pyproject.toml
media-conversion-api/: README.md  app.ts  main.ts  package.json  types.ts
media-conversion-api/jobs/: index.ts
media-conversion-api/routes/: file.ts  health.ts  index.ts  media.ts
media-conversion-api/utils/: audio-to-text.ts  video-to-audio.ts
media-conversion-api/workers/: media-job-worker.ts
media-orchestrator-api/: package.json
media-orchestrator-api/routes/: file.ts  media.ts
media-orchestrator-api/utils/: audio-to-text.ts
media-orchestrator-api/workers/: media-job-worker.ts
media-processor-api/: app.ts  index.ts  package.json  types.ts
transcription-api/: README.md  main.py  pyproject.toml
ui/: index.html  package.json
ui/src/: App.tsx  main.tsx  types.ts
ui/src/components/: ActionButton.tsx  ChatInput.tsx  ChatMessages.tsx  JobTable.tsx  MarkdownMessage.tsx  NavBar.tsx  ReactiveInput.tsx  Sidebar.tsx  SidebarItem.tsx
ui/src/context/: AppContext.tsx  ChatContext.tsx  FileContext.tsx  JobContext.tsx
ui/src/hooks/: useAudioJob.ts  useFetchFiles.ts  useMediaJob.ts  useProgressLoader.ts  useSmoothProgress.ts  useTextFiles.ts  useVideoToAudioJob.ts
ui/src/pages/: ChatPage.tsx  MediaPage.tsx
video-to-audio/: package.json
video-to-audio-api/: README.md  index.ts  package.json  types.ts
video-to-audio-ui/: .env  package.json
video-to-audio-ui/src/: App.tsx  types.ts
video-to-audio/ui/: package.json
(+6 files in other folders)
