[project]
name = "transcription-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "faster-whisper>=1.1.1",
    "mutagen>=1.47.0",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
